# django

./: pyproject.toml
clientes/: admin.py  serializers.py  validators.py  views.py
setup/: urls.py
