[tool.poetry]
name = "clients-django"
version = "0.1.0"
description = ""
authors = ["Matheus Abdias <matheusabdias.b2bit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
validate-docbr = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.13.5"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
